--- a/README.Rmd
+++ b/README.Rmd
@@ -1,25 +1,34 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # NCBNAqua
 
 <!-- badges: start -->
-
 <!-- badges: end -->
 
-The goal of NCBNAqua is to …
+The goal of NCBNAqua is to ...
 
 ## Installation
 
-You can install the development version of NCBNAqua from
-[GitHub](https://github.com/) with:
+You can install the development version of NCBNAqua from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("pak")
 pak::pak("laura-feher/NCBNAqua")
 ```
-
-``` r
+```{r}
 library(httr)
 library(jsonlite)
 ## global variables for api connection 
@@ -30,37 +39,38 @@ library(jsonlite)
 # publishapiurl = 'https://aquarius.nps.gov/aquarius/Publish/v2'
 ```
 
-``` r
+```{r}
 ## View all locations with water data in a specific I&M Network
 #Print_Locations(Network = "Northeast Coastal and Barrier Network") 
 ```
 
-``` r
+```{r}
 # View sites associated with the NCBN SETs
 # Print_Locations(Network = "Northeast Coastal and Barrier Network") %>%
 #   filter(stringr::str_detect(Identifier, "WaterLevel$")) # select sites with the suffix "WaterLevel"
 ```
 
-``` r
+```{r}
 #enter the location of interest to get a list of datasets:
 # Print_datasets(Location = "ASIS_M5_WaterLevel")
 ```
 
-``` r
+```{r}
 #you can also print available metadata for a given location based on it's identifier:
 # Print_metadata(Location = "ASIS_M5_WaterLevel")
 ```
 
-``` r
+```{r}
 # Pull the raw dataset from Aquarius
 # raw_record <- Get_timeseries2(record = "Depth.meters NAVD88@ASIS_M5_WaterLevel") 
 
 # head(raw_record$Points)
 ```
-
-``` r
+```{r}
 #this function will "clean it up"
 # temp_data <- TS_simplify(data = raw_record)
 
 # head(temp_data)
 ```
+ 
+ 
