--- a/Quarto/function_usage.qmd
+++ b/Quarto/function_usage.qmd
@@ -14,10 +14,15 @@ embed-resources: true
 #| message: false
 #| warning: false
 library(tidyverse)
+library(remotes)
 
 # Source functions from imd-fetchaquarius
-source("https://raw.githubusercontent.com/nationalparkservice/imd-fetchaquarius/refs/heads/main/R/timeseries_client.R")
-source("https://raw.githubusercontent.com/nationalparkservice/imd-fetchaquarius/refs/heads/main/R/retrieve_data.R")
+if (!requireNamespace("fetchaquarius", quietly = TRUE)) {
+  # If not installed, install the package
+  remotes::install_github("nationalparkservice/imd-fetchaquarius", dependencies = TRUE)
+}
+
+library(fetchaquarius)
 
 # set username and then enter password
 # keyring::key_set("aquarius", "aqreadonly")
@@ -29,15 +34,6 @@ connectToAquarius("aqreadonly")
 ```{r get-wl-data}
 #| message: false
 #| warning: false
-
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/calc_longest_flood.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/calc_flood_events.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/calc_time_flooded.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/calc_daily_mean_flood.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/calc_flood_depths.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/get_wl_data.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/calc_tidal_datums.R")
-source("C:/Users/lfeher/OneDrive - DOI/NCBNAqua/R/find_extremes.R")
 
 # set the site order 
 site_order <- c("Marsh 5 (Pope Bay)", "Marsh 6 (Pine Tree)", "Marsh 8 (Valentines)", "Marsh 11", "Exclosures", "Pine Tree Study")
@@ -59,7 +55,7 @@ head(asis_wl)
 ```{r calc-tidal-datums}
 #| message: false
 #| warning: false
-asis_tidal_datums <- calc_tidal_datums(asis_wl)
+asis_tidal_datums <- tidal_datums(asis_wl)
 
 head(asis_tidal_datums)
 ```
@@ -67,35 +63,42 @@ head(asis_tidal_datums)
 ```{r calc-flood-depths}
 #| message: false
 #| warning: false
-# Average minimum daily flood depth, an indicator of marsh drainage, was calculated as the average difference between the daily minimum water elevation and the marsh elevation at each site. See Stagg et al. 2020  
+# Create a data frame with the elevation of the marsh surface in meters NAVD88 and use it in conjunction with the water level data referenced to NAVD88 in order to calculate the depth of flooding over the marsh surface at each time step. In the next step(s), this can be used to calculate daily mean mimium, maximum, or average flood depth.  
 
+# data frame of marsh surface elevations in meters NAVD88
 asis_elev_df <- data.frame(LocationIdentifier = c("ASIS_M5_WaterLevel", "ASIS_M6_WaterLevel", "ASIS_M8_WaterLevel"), elev_navd88 = c(0.145, 0.1325, 0.200))
 
-asis_flood_depths <- calc_flood_depths(wl_data = asis_wl, elev_df = asis_elev_df)
+asis_flood_depths <- flood_depths(wl_data = asis_wl, elev_df = asis_elev_df)
 
-head(asis_flood_depths)
+asis_flood_depths
 ```
 
 ```{r calc-daily-mean-min-flood-depth-height}
 #| message: false
 #| warning: false
-asis_daily_mean_min_flood <- calc_daily_mean_flood(flood_depths_df = asis_flood_depths, summary_metric = "min")
+# Using the flood depths calculated in the previous step (using the function `calc_flood_depths`), calculate the daily mean mininum flood depth above the marsh surface. Average minimum daily flood depth, an indicator of marsh drainage, was calculated as the average difference between the daily minimum water elevation and the marsh elevation at each site. See Stagg et al. 2020  
+
+asis_daily_mean_min_flood <- daily_mean_flood(flood_depths_df = asis_flood_depths, summary_metric = "min")
 
 head(asis_daily_mean_min_flood)
 ```
 
-```{r calc-daily-mean-mean-flood-depth-height}
+```{r calc-daily-mean-average-flood-depth-height}
 #| message: false
 #| warning: false
-asis_daily_mean_mean_flood <- calc_daily_mean_flood(asis_flood_depths, summary_metric = "mean")
+# Similarly, using the previously calculated flood depths (via the function `calc_flood_depths`), calculate the daily mean average flood depth above the marsh surface.
 
-head(asis_daily_mean_mean_flood)
+asis_daily_mean_avg_flood <- daily_mean_flood(asis_flood_depths, summary_metric = "average")
+
+head(asis_daily_mean_avg_flood)
 ```
 
 ```{r calc-percent-time-flooded}
 #| message: false
 #| warning: false
-asis_time_flooded <- calc_time_flooded(asis_flood_depths)
+# Calculate the percent of time that the water level is above the marsh over the course of the period of record.
+
+asis_time_flooded <- time_flooded(asis_flood_depths)
 
 head(asis_time_flooded)
 ```
@@ -103,7 +106,9 @@ head(asis_time_flooded)
 ```{r calc-num-flood-events}
 #| message: false
 #| warning: false
-asis_flood_events <- calc_flood_events(flood_depths_df = asis_flood_depths)
+# Calculate the number of times that the marsh was flooded - defined as the number of events where the water level switched from below the marsh to above the marsh suface.
+
+asis_flood_events <- flood_events(flood_depths_df = asis_flood_depths)
 
 head(asis_flood_events)
 ```
@@ -111,26 +116,49 @@ head(asis_flood_events)
 ```{r calc-longest-flood-event}
 #| message: false
 #| warning: false
-asis_longest_flood <- calc_longest_flood(asis_flood_depths)
+# Calculate the longest time that the marsh stayed flooded.
+
+asis_longest_flood <- longest_flood(asis_flood_depths)
 
 head(asis_longest_flood)
 ```
 
-```{r park-level-averages}
+```{r site-level-averages}
 #| message: false
 #| warning: false
-asis_mean_hydro <- asis_wl %>%
+asis_mean_site_hydro <- asis_wl %>%
   summarise(first_date = first(datetime),
             last_date = last(datetime),
             .groups = "keep") %>% 
   left_join(., asis_daily_mean_min_flood) %>%
-  left_join(., asis_daily_mean_mean_flood) %>%
+  left_join(., asis_daily_mean_avg_flood) %>%
   left_join(., asis_time_flooded)  %>%
   left_join(., asis_flood_events) %>%
   left_join(., asis_longest_flood) %>%
-  left_join(., asis_tidal_datums) %>%
-  ungroup(-park) %>%
-  summarise(across(c(elev_navd88, daily_mean_min_flood_depth, daily_mean_min_flood_elev, daily_mean_flood_depth, daily_mean_flood_elev, total_time_recorded, flooding_time, percent_time_flooded, total_flood_events, max_consecutive_flood_days, MHW, MHHW, MLW, MLLW), ~mean(.x, na.rm = TRUE), .names = "park_{.col}"))
+  left_join(., asis_tidal_datums %>%
+              select(-c(first_date, last_date)))
 
-head(asis_mean_hydro)
+head(asis_mean_site_hydro)
+```
+
+```{r}
+ggplot(data = asis_wl) +
+  geom_line(data = asis_wl, aes(x = datetime, y = water_level), color = "grey50") +
+  geom_hline(data = asis_mean_site_hydro %>%
+               ungroup() %>%
+               select(site_name, daily_mean_min_flood_elev, daily_mean_avg_flood_elev, MHW, MHHW, MLW, MLLW) %>%
+               pivot_longer(., cols = -site_name, names_to = "summary_metric"),
+               aes(yintercept = value, color = summary_metric)) +
+  geom_rect(data = asis_mean_site_hydro, aes(xmin = min_date_longest_flood, xmax = max_date_longest_flood, ymin = -Inf, ymax = Inf), color = "red", alpha = 0.5) +
+  geom_vline(aes(xintercept = as.POSIXct(as.Date("2012-10-30"))), color = "blue", alpha = 0.5) +
+  facet_wrap(site_name~., nrow = 3, scales = "free_y")
+```
+
+```{r}
+asis_mean_park_hydro <- asis_mean_site_hydro %>%
+  ungroup(-park) %>%
+  select(-c(Name, Identifier, LocationIdentifier, site_name, first_date, last_date, consecutive_group, data, min_date_longest_flood, max_date_longest_flood)) %>%
+  summarise(across(everything(), ~mean(.x, na.rm = TRUE), .names = "park_{.col}"))
+
+head(asis_mean_park_hydro)
 ```
